--- a/assets/src/template/footer.html
+++ b/assets/src/template/footer.html
@@ -1,5 +1,69 @@
 <footer class="page-footer">
 	<div class="container-fluid">
-		footer
+		<div class="page-footer__in">
+			<div class="page-footer__wrap page-footer-menu">
+				<div class="page-footer__item">
+					<div class="page-footer-menu__top">О компании</div>
+					<a href="#" class="page-footer-menu__link">Команда</a>
+					<a href="#" class="page-footer-menu__link">Партнеры и клиенты</a>
+					<a href="#" class="page-footer-menu__link">Отзывы</a>
+					<a href="#" class="page-footer-menu__link">Правовая информация</a>
+				</div>
+				<div class="page-footer__item">
+					<div class="page-footer-menu__top">Пресс-центр</div>
+					<a href="#" class="page-footer-menu__link">Пресс релизы</a>
+					<a href="#" class="page-footer-menu__link">Презентация</a>
+					<a href="#" class="page-footer-menu__link">Скачать</a>
+				</div>
+				<div class="page-footer__item">
+					<div class="page-footer-menu__top">Работа у нас</div>
+					<a href="#" class="page-footer-menu__link">Вакансии</a>
+					<a href="#" class="page-footer-menu__link">Работа в Евротайм</a>
+				</div>
+				<div class="page-footer__item">
+					<div class="page-footer-menu__top">Инвесторам</div>
+					<a href="#" class="page-footer-menu__link">Раскрытие информации</a>
+					<a href="#" class="page-footer-menu__link">Финансовая отчетность</a>
+				</div>
+			</div>
+			<div class="page-footer__wrap page-footer-info">
+				<div class="page-footer-half">
+					<div class="page-footer__item">
+						<a href="#" class="page-footer__logo"></a>
+					</div>
+					<div class="page-footer__item">
+						<div class="f-socials">
+							<a href="#" class="f-socials__link m-insta"></a>
+							<a href="#" class="f-socials__link m-fb"></a>
+							<a href="#" class="f-socials__link m-you"></a>
+							<a href="#" class="f-socials__link m-vk"></a>
+							<a href="#" class="f-socials__link m-unknown"></a>
+							<a href="#" class="f-socials__link m-ok"></a>
+						</div>	
+					</div>
+				</div>
+				<div class="page-footer-half">
+					<div class="page-footer__item">
+						<div class="page-footer__place">Минск, пр-т Дзержинского, 3Б-91 </div>
+					</div>
+					<div class="page-footer__item">
+						<a href="tel:+375296064242" class="page-footer__phone">+375 29 606 42 42</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="bottom">
+		<div class="container-fluid">
+			<div class="bottom__wrap">
+				<div class="copy">&copy;  2021, ООО «Лизинговая компания «Евротайм»</div>
+				<a href="https://nineseven.by/" class="develop" target="_blank">
+					<div class="develop__txt">
+						Разработка сайта
+					</div>
+					<div class="develop__icon"></div>
+				</a>
+			</div>
+		</div>
 	</div>
 </footer>
