--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -1,5 +1,50 @@
 <header class="page-header">
-	<div class="container-fluid">
-		header
+	<div class="page-header-top">
+		<div class="container-fluid">
+			<div class="page-header-top__wrap">
+				<a href="#" class="logo"></a>
+				<div class="page-header-top-more">
+					<div class="page-header-toggle">
+						<a href="#" class="page-header-toggle__item active">Бизнес</a>
+						<a href="#" class="page-header-toggle__item">Физлицо</a>
+					</div>
+					<address class="page-header__location">Минск, пр-т Дзержинского, 3Б-91</address>
+					<a href="tel:+375296064242" class="page-header__phone">+375 29 606 42 42</a>
+					<a href="#" class="page-header__btn">Заказать звонок</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="page-header-menu">
+		<div class="container-fluid">
+			<div class="page-header-menu__wrap">
+				<div class="menu">
+					<a href="#" class="menu-btn">
+						<span class="burger-icon"></span>
+						Меню
+					</a>
+				</div>
+				<div class="page-header-m">
+					<div class="page-header-nav">
+						<div class="page-header-nav__item m-sub">
+							<a href="#" class="page-header-nav__link">Каталог</a>
+						</div>
+						<div class="page-header-nav__item m-sub">
+							<a href="#" class="page-header-nav__link">Лизинг</a>
+						</div>
+						<div class="page-header-nav__item m-sub">
+							<a href="#" class="page-header-nav__link">Страхование</a>
+						</div>
+						<div class="page-header-nav__item m-sub">
+							<a href="#" class="page-header-nav__link">Услуги</a>
+						</div>
+						<div class="page-header-nav__item">
+							<a href="#" class="page-header-nav__link">Спецпредложения</a>
+						</div>
+					</div>
+					<a href="#" class="page-header-search"></a>
+				</div>
+			</div>
+		</div>
 	</div>
 </header>
