--- a/assets/src/style/components/body.scss
+++ b/assets/src/style/components/body.scss
@@ -13,6 +13,7 @@ html{
     -ms-text-size-adjust: 100%;
   	-webkit-text-size-adjust: 100%;
   	box-sizing: border-box;
+	overflow-x: hidden;
 }
 
 
@@ -50,7 +51,7 @@ a{
 
 body {
 	margin: 0;
-	height: 100%;
+	//height: 100%;
 	background: $default-site-bg;
 	-webkit-font-smoothing: antialiased;
 	font-size: $default-size-font;
@@ -59,6 +60,20 @@ body {
 	font-weight: 300;
 	display: flex;
   	flex-direction: column;
+	position: relative;
+	padding: 0 80px;
+	overflow-x: hidden;
+	&:after{
+		content: "";
+		display: block;
+		width: 100%;
+		height: 230px;
+		background: #fff;
+		bottom: 0;
+		left: 0;
+		position: absolute;
+		pointer-events: none;
+	}
 }
 
 textarea,input {
@@ -69,10 +84,10 @@ textarea,input {
 }
 
 
-::-webkit-input-placeholder {color:#a5a8ab;transition:all 0.3s ease;}
-::-moz-placeholder          {color:#a5a8ab;transition:all 0.3s ease;}
-:-moz-placeholder           {color:#a5a8ab;transition:all 0.3s ease;}
-:-ms-input-placeholder      {color:#a5a8ab;transition:all 0.3s ease;}
+::-webkit-input-placeholder {color: #4F4F4F;transition:all 0.3s ease;}
+::-moz-placeholder          {color: #4F4F4F;transition:all 0.3s ease;}
+:-moz-placeholder           {color: #4F4F4F;transition:all 0.3s ease;}
+:-ms-input-placeholder      {color: #4F4F4F;transition:all 0.3s ease;}
 
 
 
