--- a/assets/src/style/components/media.scss
+++ b/assets/src/style/components/media.scss
@@ -8,6 +8,269 @@
 }
 
 //MEDIA
-@media screen and (max-width: 1320px){
+@media screen and (max-width: 1200px){
+    body {
+        padding: 0 40px;
+    }
+    .container-fluid {
+        max-width: 1248px;
+        padding: 0 24px;
+    }
+    .page-footer-half {
+        align-items: flex-start;
+        flex-wrap: wrap;
+    }
+    .page-footer-info{
+        flex-wrap: wrap;
+        .page-footer__item{
+            width: 100%;
+            padding-right: 0;
+            margin-bottom: 20px;
+            &:last-child{
+                margin-bottom: 0;
+            }
+        }
+    }
+    .page-footer__in {
+        padding: 70px 0 43px 0;
+    }
+    .bottom{
+        .container-fluid{
+            padding:0;
+        }
+    }
+    .indent {
+        padding-left: 40px;
+    }
+    .popup td, .workarea td,
+    .popup th, .workarea th{
+        padding: 10px;
+        font-size: 14px;
+    }
+    .popup tr:nth-child(2) td,
+    .workarea tr:nth-child(2) td{
+        padding-top: 10px;
+    }
+    .popup ol, .workarea ol,
+    .popup ul, .workarea ul{
+        font-size: inherit;
+    }
+    .popup ul li, .workarea ul li{
+        padding-left: 20px;
+        &:before{
+            top: 10px;
+        }
+    }
+    .popup ol>li, .workarea ol>li{
+        padding-left: 40px;
+        &:before{
+            top: 0;
+        }
+    }
+    .popup ol>li ol>li, .workarea ol>li ol>li {
+        padding-left: 60px;
+    }
+    .page-news-v__info {
+        padding: 40px 40px 40px 190px;
+        margin-left: -160px;
+    }
+    .page-news-v__img {
+        width: 380px;
+        min-width: 380px;
+    }
+    .page-news__info {
+        padding: 40px;
+        margin: 0 20px;
+    }
+}
 
+
+@media screen and (max-width: 991px){
+    body {
+        padding: 0 24px;
+    }
+    body:after{
+        height: 200px;
+    }
+    .page-footer__item{
+        padding-right: 15px;
+    }
+    .indent {
+        padding-left: 0;
+    }
+    .popup h1,
+    .workarea h1 {
+        margin-bottom: 30px;
+        font-size: 48px;
+    }
+    .popup h2,
+    .workarea h2{
+        margin-bottom: 30px;
+        font-size: 36px;
+    }
+    .popup h3,
+    .workarea h3{
+        margin-bottom: 30px;
+        font-size: 30px;
+    }
+    .popup h4,
+    .workarea h4{
+        margin-bottom: 30px;
+        font-size: 24px;
+    }
+    .page-news__title{
+        font-size: 20px;
+    }
+    .page-news__info{
+        padding: 20px;
+        min-height: calc(100% - 250px);
+    }
+    .page-news__img {
+        height: 250px;
+    }
+    .page-news__txt {
+        margin-bottom: 15px;
+    }
+    .page-news__title {
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 767px){
+    body {
+        padding: 0 10px;
+        font-size: 16px;
+    }
+    .page-footer-menu{
+        display: none;
+    }
+    .page-footer__in {
+        padding: 32px 0 61px 0;
+    }
+    .page-footer-half{
+        width: 100%;
+    }
+    .page-footer-info .page-footer__item {
+        justify-content: center;
+        display: flex;
+    }
+    .page-footer__logo {
+        margin-bottom: 20px;
+    }
+    .f-socials{
+        margin-bottom: 40px;
+    }
+    .container-fluid{
+        padding: 0 10px;
+    }
+    .bottom {
+        padding: 30px 0;
+    }
+    .bottom__wrap {
+        flex-wrap: wrap;
+    }
+    .copy{
+        margin-bottom: 13px;
+        width: 100%;
+        text-align: center;
+    }
+    .develop {
+        width: 100%;
+        justify-content: center;
+    }
+    .popup h1, .workarea h1 {
+        font-size: 30px;
+    }
+
+    .popup h2,
+    .workarea h2{
+        font-size: 28px;
+    }
+    .popup h3,
+    .workarea h3{
+        font-size: 24px;
+    }
+    .popup h4,
+    .workarea h4{
+        font-size: 20px;
+    }
+    .breadcrumbs{
+        margin-bottom: 30px;
+    }
+    .page-image{
+        margin-bottom: 30px;
+    }
+    .page-image__caption {
+        padding: 15px 0;
+    }
+    .col-half {
+        width: 100%;
+        margin-bottom: 20px;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    .page-form {
+        max-width: 100%;
+        margin-bottom: 30px;
+    }
+    .page-news__list{
+        margin-right: 0;
+    }
+    .page-news__item {
+        padding-right: 0;
+        width: 100%;
+        margin-bottom: 40px;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    .page-news__info {
+        min-height: auto;
+        top: -40px;
+    }
+    .page-news__in {
+        margin-bottom: -40px;
+    }
+
+
+    .page-news-v__in {
+        flex-wrap: wrap;
+        margin-bottom: -40px;
+    }
+    .page-news-v__img {
+        width: 100%;
+        min-width: 100%;
+        height: 250px;
+        padding: 0;
+    }
+    .page-news-v__info{
+        position: relative;
+        top: -40px;
+        margin: 0 20px;
+        padding: 20px;
+        z-index: 1;
+        min-height: auto;
+    }
+    .page-news-v__txt{
+        margin-bottom: 15px;
+    }
+    .page-news-v__item{
+        margin-bottom: 40px;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+}
+
+@media screen and (max-width: 400px){
+    .develop{
+        flex-wrap:wrap;
+    }
+    .develop__icon {
+        margin-left: 0;
+        width: 100%;
+        margin-top: 8px;
+    }
 }
