--- a/assets/src/style/pages/index.scss
+++ b/assets/src/style/pages/index.scss
@@ -1,3 +1,123 @@
-.index{
-	
+.m-index{
+	.breadcrumbs__item{
+        color: #fff;
+    }
+    .page-content{
+        padding-bottom: 120px;
+        >.container-fluid{
+            max-width: 100%;
+            padding: 0;
+        }
+    }
+}
+
+.index-top-wrap{
+    margin-bottom: 130px;
+    .breadcrumbs{
+        margin: 0;
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        left: 0;
+        top: 0;
+        padding-top: 50px;
+    }
+}
+.index-title{
+    font-size: 40px;
+    line-height: 1.2;
+    font-family: 'als_gorizontregular_expanded';
+}
+.index-catalog{
+    padding-bottom: 118px;
+    .index-title{
+        margin-bottom: 100px;
+    }
+}
+.index-leasing{
+    background: #D4D6D8;
+    padding: 75px 0 106px;
+}
+
+.index-top__img{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+.index-top__item{
+    position: relative;
+    min-height: 750px;
+}
+.index-top__in{
+    position: relative;
+    z-index: 1;
+    color: #fff;
+    padding: 145px 0 55px;
+}
+.index-top__title{
+    font-size: 72px;
+    line-height: 1;
+    font-family: 'als_gorizontregular_expanded';
+    margin-bottom: 50px;
+}
+
+
+.index-top-add{
+    padding-left: 100px;
+    margin-bottom: 94px;
+}
+.index-top-add__item{
+    font-size: 20px;
+    color: #FFFFFF;
+    margin-bottom: 6px;
+    // font-family: 'als_gorizontregular_expanded';
+    &:last-child{
+        margin-bottom: 0;
+    }
+    strong {
+        font-family: 'als_gorizontregular_expanded';
+    }
+}
+
+
+
+.index-top-form{
+    max-width: 1000px;
+    margin-bottom: 31px;
+}
+.index-top-form__wrap{
+    display: flex;
+}
+.index-top-form__item{
+    flex-grow: 1;
+    &:first-child{
+        padding-right: 20px;
+    }
+    &.m-submit{
+        width: 250px;
+        max-width: 250px;
+        margin-left: 50px;
+        input[type=submit]{
+            width: 100%;
+        }
+    }
+}
+
+.index-form-msg{
+    font-size: 12px;
+    text-align: right;
+    padding-right: 315px;
+    a{
+        color: #fff;
+        text-decoration: underline;
+        &:hover{
+            text-decoration: none;
+            color: #fff;
+        }
+    }
 }
