--- a/assets/src/style/style.scss
+++ b/assets/src/style/style.scss
@@ -10,18 +10,18 @@
     font-style: normal;
 
 }
-// @font-face {
-//     font-family: 'tt_normsbold';
-//     src: url('../fonts/ttnorms/ttnorms-bold/ttnorms-bold.eot');
-//     src: url('../fonts/ttnorms/ttnorms-bold/ttnorms-bold.eot?#iefix') format('embedded-opentype'),
-//          url('../fonts/ttnorms/ttnorms-bold/ttnorms-bold.woff2') format('woff2'),
-//          url('../fonts/ttnorms/ttnorms-bold/ttnorms-bold.woff') format('woff'),
-//          url('../fonts/ttnorms/ttnorms-bold/ttnorms-bold.ttf') format('truetype'),
-//          url('../fonts/ttnorms/ttnorms-bold/ttnorms-bold.svg#tt_normsbold') format('svg');
-//     font-weight: normal;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'als_gorizontregular_expanded';
+    src: url('../fonts/als-gorizont/als-gorizont-regular/als-gorizont-regular.eot');
+    src: url('../fonts/als-gorizont/als-gorizont-regular/als-gorizont-regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/als-gorizont/als-gorizont-regular/als-gorizont-regular.woff2') format('woff2'),
+         url('../fonts/als-gorizont/als-gorizont-regular/als-gorizont-regular.woff') format('woff'),
+         url('../fonts/als-gorizont/als-gorizont-regular/als-gorizont-regular.ttf') format('truetype'),
+         url('../fonts/als-gorizont/als-gorizont-regular/als-gorizont-regular.svg#als_gorizontregular_expanded') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}
 
 
 ymaps[class$="-copyright"] {
@@ -38,7 +38,7 @@ ymaps[class$="-copyright"] {
 }
 .container-fluid{
 	width: 100%;
-	max-width: 1216px;
+	max-width: 1240px;
     padding: 0 20px;
 	position: relative;
 	margin: 0 auto;
@@ -46,6 +46,210 @@ ymaps[class$="-copyright"] {
 
 
 .page-content{
-	padding: 20px 0;
+	padding: 150px 0 20px;
+    position: relative;
+    z-index: 1;
 }
 
+.breadcrumbs{
+    margin-bottom: 76px;
+    padding-top: 42px;
+    font-size: 14px;
+}
+.breadcrumbs__wrap{
+    display: flex;
+    flex-wrap:wrap;
+}
+.breadcrumbs__item{
+    color: #4F4F4F;
+    font-style: italic;
+}
+a.breadcrumbs__item{
+    &:after{
+        content: "/";
+        display: inline-block;
+        margin: 0 4px;
+    }
+}
+span.breadcrumbs__item{
+    opacity: 0.6;
+}
+.indent{
+    padding-left: 100px;
+}
+.page-image{
+    margin-bottom: 80px;
+    img{
+        display: block;
+        max-width: 100%;
+    }
+}
+.page-image__in{
+    display: inline-block;
+    position: relative;
+}
+.page-image__caption{
+    font-style: italic;
+    padding: 32px 0;
+}
+
+.page-pre{
+    position: relative;
+    &:before{
+        content: "";
+        display: block;
+        height: 270px;
+        width: 50vw;
+        position: absolute;
+        right: 100%;
+        top: 0;
+        background: #fff;
+    }
+    &:after{
+        content: "";
+        display: block;
+        height: 270px;
+        width: 50vw;
+        position: absolute;
+        left: 100%;
+        top: 0;
+        background: #fff;
+    }
+}
+
+.col-wrap{
+    display: flex;
+    flex-wrap:wrap;
+}
+.col-half{
+    width: 50%;
+}
+.page-form{
+    max-width: 400px;
+    margin-bottom: 60px;
+    input[type="submit"]{
+        width: 100%;
+    }
+}
+.page-form__item{
+    margin-bottom: 20px;
+}
+
+.page-form__msg{
+    font-size: 12px;
+    a{
+        color: #4F4F4F;
+        text-decoration: underline;
+        &:hover{
+            text-decoration: none;
+        }
+    }
+}
+
+.page-news__list{
+    margin-bottom: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    //padding-right: 100px;
+    margin-right: -20px;
+}
+.page-news__item{
+    padding-right: 20px;
+    width: 50%;
+    margin-bottom: -49px;
+}
+.page-news__in{
+    width: 100%;
+    height: 100%;
+    color: #4F4F4F;
+    display: block;
+}
+.page-news__img{
+    height: 370px;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+.page-news__info{
+    padding: 50px 60px;
+    background: #fff;
+    min-height: calc(100% - 370px);
+    margin: 0 40px;
+    position: relative;
+    top: -49px;
+}
+
+.page-news__title{
+    font-family: 'als_gorizontregular_expanded';
+    font-size: 24px;
+    line-height: 1.3;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #828282;
+}
+.page-news__txt{
+    margin-bottom: 23px;
+}
+.page-news__date{
+    font-size: 16px;
+    font-style: italic;
+    color: #B8543E;
+    text-align: right;
+}
+
+
+
+
+
+
+.page-news-v{
+    margin-bottom: 60px;
+}
+.page-news-v__item{
+    margin-bottom: 30px;
+}
+.page-news-v__in{
+    color: #4F4F4F;
+    display: flex;
+    align-items: center;
+}
+.page-news-v__img{
+    height: 400px;
+    width: 510px;
+    min-width: 510px;
+    padding: 40px 0;
+    position: relative;
+    z-index: 1;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+.page-news-v__info{
+    padding: 87px 60px 40px 300px;
+    background: #fff;
+    position: relative;
+    margin-left: -210px;
+    min-height: 400px;
+}
+
+.page-news-v__title{
+    font-family: 'als_gorizontregular_expanded';
+    font-size: 24px;
+    line-height: 1.3;
+    padding-bottom: 36px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #828282;
+}
+.page-news-v__txt{
+    margin-bottom: 40px;
+}
+.page-news-v__more{
+    font-size: 16px;
+    font-style: italic;
+    color: #B8543E;
+    text-align: right;
+}
